Fixed the scroll and spacing issues I was having. Realized I could use overflow-y instead of just overflow and remembered I could use padding.

--- a/opdracht-2/styles.css
+++ b/opdracht-2/styles.css
@@ -5,6 +5,8 @@
 
 body {
     height: 100vh;
+
+    display: flex;
     justify-content: space-evenly;
 }
 
@@ -14,7 +16,9 @@ body {
 
 .sidebar {
     flex-grow: 1;
-    flex-basis: 280px;
+    flex-basis: 250px;
+
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
@@ -22,11 +26,14 @@ body {
 
 
 .content {
+    flex-basis: 0;
     flex-grow: 20;
+
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+    overflow-y: scroll;
 }
+
 
 /*---------------- Sidebar ----------------*/
 
@@ -85,33 +92,43 @@ body {
 
 
 
-/*---------------- Content ----------------*/
+/*---------------- Header ----------------*/
 header {
     background-image: url("../assets/placeholder-image.svg");
-    background-size: 100%;
     background-position: center;
-    flex-basis: 66vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    padding-top: 140px;
+    padding-bottom: 140px;
 }
 
-header .subtitle {
-    flex-grow: 0;
-    flex-shrink: 1;
+
+/*---------------- Main ----------------*/
+main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 24px;
+    padding: 40px;
 }
+
+.product {
+    flex-basis: 260px;
+}
+
+
 
 
 
 /*---------------- Footer ----------------*/
 footer {
-    flex-basis: 44px;
     background-color: #383838;
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    text-align: center;
+    padding: 16px;
 }
 
 
@@ -121,12 +138,6 @@ footer {
 /*
 header {
     border: solid 4px cyan;
-}
-.title {
-    border: dashed 4px orange;
-}
-.subtitle {
-    border: dashed 4px brown;
 }
 .logo {
     border: dashed 2px green;
@@ -139,5 +150,14 @@ header {
 }
 .sidebar {
 border: solid 2px magenta;
+}
+.content {
+    border: dashed 4px black;
+}
+main {
+    border: dashed 4px yellow;
+}
+.product {
+    border: dashed 4px blue;
 }
 */
